# trdr

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  strategy_a_equity_orb_v2.pine
.devcontainer/: Dockerfile  devcontainer.json
configs/: risk.yaml  sessions.yaml  strategy_a.yaml  strategy_c.yaml  strategy_d.yaml
configs/corrected_paper/: bot.yaml
configs/corrected_v4/: bot.yaml  instruments.yaml
configs/executor_v3/: bot.yaml
configs/prop_v2/: bot.yaml
configs/trader_v1/: instruments.yaml  strategy_b.yaml
data/corrected_replay/: corrected_bars.csv
docs/runbooks/: corrected_paper_vps.md  systemd_service_example.md  tmux_runbook.md  two_bot_vps.md  vps_deploy.md
scripts/: deploy_corrected_paper_vps.sh  run_corrected_paper.sh  verify_corrected_paper_vps.sh
services/: corrected_paper.service  prop_v2.service  trader_v1.service
src/bot_corrected_paper/: __init__.py  __main__.py  cli.py  config.py  controller.py  engine.py
src/bot_corrected_v4/: __init__.py  __main__.py  cli.py  config.py  live.py
src/bot_exec_v3/: __init__.py  cli.py  controller.py  executor.py  journal.py  live.py  models.py  query.py  risk.py  summary.py
src/bot_prop_v2/: __init__.py  cli.py  config.py  live.py
src/bot_trader_v1/: __init__.py  (+5 more)
tests/: test_alert_state.py  test_anchored_session.py  test_backtest_cli.py  test_backtest_metrics.py  test_backtest_replay_smoke.py  test_bcd_wired_through_risk_vault.py  test_bot_corrected_paper.py  test_bot_corrected_v4_live_runtime.py  test_bot_corrected_v4_scaffold.py  test_bot_exec_v3.py  test_bot_exec_v3_commands.py  test_bot_exec_v3_live_runtime.py  test_bot_prop_v2_live_runtime.py  test_bot_prop_v2_scaffold.py  test_calendar_lockouts.py  test_config_loader.py  test_conflict_resolver_metals_pair_vs_breakout.py  test_corrected_orchestrator.py  test_corrected_replay_validation.py  test_corrected_signal_architecture.py  test_data_integrity.py  test_data_quality_live.py  test_features_atr_rank.py  test_features_indicators.py  test_features_rvol.py  test_features_vwap.py  test_live_backpressure.py  test_live_databento_adapter.py  test_live_mock_ws.py  test_master_spec_v2_alignment.py  test_multi_bot_layout.py  test_multistrategy_paper_smoke.py  test_ndjson_writer.py  test_orb_pipeline.py  test_paper_engine.py  test_policy_guard.py  test_portfolio_orchestrator.py  test_prepare_corrected_data.py  test_regime_engine.py  test_risk_caps.py  (+14 more)
tradingview/: strategy_a_orb_v6.pine
(+132 files in other folders)
